# parallella

./: .gitignore  CMakeLists.txt  README.md
benchmark/: README.md  bm_davidson.cpp  plot_convergence.py
cmake/: FindMKL.cmake
include/: parallella.hpp
src/level1/: CMakeLists.txt  README.md  VV.hpp  test1.cpp
src/level2/: qr.hpp
src/level3/: Davidson.hpp
test/: test_davidson.cpp  test_qr.cpp
